syntax = "proto3";
package fib.rpc;

service fib_grpc
{
    rpc fib (fib_request) returns (fib_reply) {}
}

message fib_request
{
    uint64 number = 1;
}

message fib_reply
{
    string result    = 1;
    int64 timestamp  = 2;
    uint64 count     = 3;
}